k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sam-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: sam-frontend
