k8s/ingress-api.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-api
  namespace: vrd-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "http://www.vrd-skgc.com,http://vrd-skgc.com"
spec:
  rules:
  - host: api.vrd-skgc.com
    http:
      paths:
      - backend:
          serviceName: sam-backend
          servicePort: 8080
        path: /(.*)
      - backend:
          serviceName: sam-notification
          servicePort: 8080
        path: /noti/(.*)
