k8s/ingress-www.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-www
  namespace: vrd-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: vrd-skgc.com
    http:
      paths:
      - backend:
          serviceName: sam-frontend
          servicePort: 80
        path: /(.*)
  - host: www.vrd-skgc.com
    http:
      paths:
      - backend:
          serviceName: sam-frontend
          servicePort: 80
        path: /(.*)
